#removed some comented codes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -46,7 +46,7 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
-
+/*
 body {
   margin: 0;
   font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -57,7 +57,7 @@ body {
   text-align: left;
   background-color: #fff;
 }
-
+*/
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
