--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 
 h1,
 h2 {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'sans-serif', cursive;
 }
 p{
   font-family: "Open Sans", sans-serif;
