--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
 
 h1,
 h2 {
-  font-family: 'sans-serif', cursive;
+  /* font-family: 'sans-serif', Roboto; */
 }
 p{
   font-family: "Open Sans", sans-serif;
@@ -144,13 +144,145 @@ a:focus {
   padding: 15px 0;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .header_section .container-fluid {
   padding-right: 25px;
   padding-left: 25px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .navbar-brand {
-  font-family: 'Dancing Script', cursive;
+  /* font-family: 'Dancing Script', cursive; */
 }
 
 .navbar-brand span {
@@ -382,7 +514,7 @@ a:focus {
   font-size: small;
   font-weight: bold;
   margin-bottom: 15px;
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Dancing Script' sans-serif;
   color: #ffffff;
 }
 
