--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,6 +36,23 @@ padding-left: 0;
     margin-right: 0;
     margin-bottom: 15px;
   }
+
+  .image-wrapper{
+  display: grid;
+  grid-template-columns: repeat(2, 300px);
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+
+
+.img-container img{
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+}
 }
 
 @media (max-width: 767px) {
@@ -58,6 +75,35 @@ padding-left: 0;
     margin-right: 15px;
     margin-bottom: 0;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .image-wrapper{
+  display: grid;
+  grid-template-columns: repeat(2, 300px);
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+
+
+.img-container img{
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+}
 }
 
 @media (max-width: 576px) {}
@@ -74,6 +120,29 @@ padding-left: 0;
     margin-right: 0;
     margin-bottom: 15px;
   }
+
+
+
+
+
+
+
+  .image-wrapper{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+
+
+.img-container img{
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+}
 }
 
 @media (max-width: 376px) {
