--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,13 @@ a:focus {
 
 
 
+.logo{
+  width: 100px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+
 
 
 
@@ -933,6 +940,57 @@ a:focus {
   background-color: #e69c00;
 }
 
+
+
+/*=================== PHOT GALARY ==============*/
+.image-wrapper{
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+
+
+.img-container img{
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .about_section {
   background: #222831;
   color: #ffffff;
@@ -1324,3 +1382,27 @@ a:focus {
   color: inherit;
 }
 /*# sourceMappingURL=style.css.map */
+
+
+
+
+
+
+.floting-button-container{
+  position: fixed;
+  bottom: 2%;
+  right: 4%;
+  cursor: pointer;
+  z-index: 777;
+}
+
+.floting-button-container a{
+}
+
+.floting-button-container a ion-icon{
+  background-color: green;
+  padding: 10px;
+  border-radius: 50%;
+  font-size: 30px;
+  color: white;
+}
