--- a/css/responsive.css
+++ b/css/responsive.css
@@ -143,6 +143,17 @@ padding-left: 0;
   height: 300px;
   border-radius: 10px;
 }
+
+
+
+
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap:30px;
+  width: 100%;
+  height: 100%;
+}
 }
 
 @media (max-width: 376px) {
