--- a/css/style.css
+++ b/css/style.css
@@ -858,7 +858,7 @@ a:focus {
 
 .food_section .box .img-box img {
   max-width: 100%;
-  max-height: 145px;
+  max-height: 100%;
   -webkit-transition: all .2s;
   transition: all .2s;
 }
@@ -878,7 +878,7 @@ a:focus {
 .food_section .box .detail-box h6 {
   margin-top: 10px;
 }
-
+/* food section custom styles 
 .food_section .box .options {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -939,7 +939,7 @@ a:focus {
 .food_section .btn-box a:hover {
   background-color: #e69c00;
 }
-
+*/
 
 
 /*=================== PHOT GALARY ==============*/
@@ -1395,6 +1395,26 @@ a:focus {
   cursor: pointer;
   z-index: 777;
 }
+
+
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap:30px;
+  width: 100%;
+  height: 100%;
+}
+.image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+
+
+
+
+
 
 .floting-button-container a{
 }
