--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ nav{
 .user_option .order_online {
   display: inline-block;
   padding: 8px 30px;
-  background-color: #ffbe33;
+  background-color: red;
   color: #ffffff;
   border-radius: 45px;
   -webkit-transition: all 0.3s;
@@ -374,7 +374,7 @@ nav{
 }
 
 .user_option .order_online:hover {
-  background-color: #e69c00;
+  background-color: rgb(224, 6, 6);
 }
 
 .custom_nav-container .navbar-toggler {
@@ -482,7 +482,7 @@ nav{
 .slider_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #ffbe33;
+  background-color: red;
   color: #ffffff;
   border-radius: 45px;
   -webkit-transition: all 0.3s;
@@ -492,7 +492,7 @@ nav{
 }
 
 .slider_section .detail-box a:hover {
-  background-color: #e69c00;
+  background-color: darkred;
 }
 
 .slider_section .img-box img {
@@ -521,7 +521,7 @@ nav{
 .slider_section .carousel-indicators li.active {
   width: 20px;
   height: 20px;
-  background-color: #ffbe33;
+  background-color: darkred;
 }
 
 
@@ -759,7 +759,7 @@ nav{
   -webkit-transition: all 0.1 0.5s;
   transition: all 0.1 0.5s;
   border-radius: 100%;
-  border: 5px solid #ffbe33;
+  border: 5px solid  darkred;;
   overflow: hidden;
 }
 
@@ -788,7 +788,7 @@ nav{
 .offer_section .box .detail-box a {
   display: inline-block;
   padding: 10px 30px;
-  background-color: #ffbe33;
+  background-color: darkred;
   color: #ffffff;
   border-radius: 45px;
   -webkit-transition: all 0.3s;
@@ -797,7 +797,7 @@ nav{
 }
 
 .offer_section .box .detail-box a:hover {
-  background-color: #e69c00;
+  background-color: darkred;
 }
 
 .offer_section .box .detail-box a svg {
@@ -1035,7 +1035,7 @@ nav{
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #ffbe33;
+  background-color: darkred;
   color: #ffffff;
   border-radius: 45px;
   -webkit-transition: all 0.3s;
@@ -1045,7 +1045,8 @@ nav{
 }
 
 .about_section .detail-box a:hover {
-  background-color: #e69c00;
+  background-color: white;
+  color: darkred;
 }
 
 .book_section {
@@ -1097,7 +1098,7 @@ nav{
   text-transform: uppercase;
   display: inline-block;
   padding: 10px 55px;
-  background-color: #ffbe33;
+  background-color: darkred;
   color: #ffffff;
   border-radius: 45px;
   -webkit-transition: all 0.3s;
@@ -1106,7 +1107,7 @@ nav{
 }
 
 .book_section .form_container button:hover {
-  background-color: #e69c00;
+  background-color: darkred;
 }
 
 .book_section .map_container {
@@ -1156,7 +1157,7 @@ nav{
 
 .client_section .box .img-box img {
   border-radius: 100%;
-  border: 5px solid #ffbe33;
+  border: 5px solid darkred;
   position: relative;
 }
 
@@ -1167,7 +1168,7 @@ nav{
   top: 0;
   width: 20px;
   height: 20px;
-  background-color: #ffbe33;
+  background-color: darkred;
   -webkit-transform: rotate(45deg) translateX(-50%);
           transform: rotate(45deg) translateX(-50%);
 }
@@ -1206,7 +1207,7 @@ nav{
 .client_section .owl-carousel .owl-nav .owl-next {
   width: 45px;
   height: 45px;
-  background-color: #ffbe33;
+  background-color: darkred;
   color: #ffffff;
   outline: none;
   bottom: 0px;
@@ -1272,7 +1273,7 @@ nav{
   text-transform: uppercase;
   display: inline-block;
   padding: 10px 55px;
-  background-color: #ffbe33;
+  background-color: darkred;
   color: #ffffff;
   border-radius: 0px;
   -webkit-transition: all 0.3s;
@@ -1280,9 +1281,7 @@ nav{
   border: none;
 }
 
-.contact_section .form_container button:hover {
-  background-color: #e69c00;
-}
+
 
 /* footer section*/
 .footer_section {
@@ -1331,7 +1330,7 @@ nav{
 }
 
 .footer_section .footer_contact .contact_link_box a:hover {
-  color: #ffbe33;
+  color: darkred;
 }
 
 .footer_section .footer-logo {
@@ -1374,7 +1373,7 @@ nav{
 }
 
 .footer_section .footer_social a:hover {
-  color: #ffbe33;
+  color: darkred;
 }
 
 .footer_section .footer-info {
